--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                     </div>
                     <script>
                         $('#jelly-slider02').jellySlider({
-                            loop: true
+                            loop: true,
+                            speed: 1000,
                         });
                     </script>
                 </div>
