--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
                 <div class="cont-box">
                     <div id="jelly-slider01" class="jelly-slider">
                         <div class="jelly-list">
+                            <div class="jelly-slide"><div class="box">0</div></div>
                             <div class="jelly-slide"><div class="box">1</div></div>
                             <div class="jelly-slide"><div class="box">2</div></div>
                             <div class="jelly-slide"><div class="box">3</div></div>
@@ -37,6 +38,7 @@
                 <div class="cont-box">
                     <div id="jelly-slider02" class="jelly-slider">
                         <div class="jelly-list">
+                            <div class="jelly-slide"><div class="box">0</div></div>
                             <div class="jelly-slide"><div class="box">1</div></div>
                             <div class="jelly-slide"><div class="box">2</div></div>
                             <div class="jelly-slide"><div class="box">3</div></div>
@@ -46,6 +48,7 @@
                         $('#jelly-slider02').jellySlider({
                             loop: true,
                             speed: 1000,
+                            fade: true,
                         });
                     </script>
                 </div>
