--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                         </div>
                     </div>
                     <script>
-                        $('#jelly-slider01').jellySlider();
+                        $('#jelly-slider01').jellySlider({
+                            loop: false
+                        });
                     </script>
                 </div>
             </li>
@@ -47,7 +49,23 @@
                     <script>
                         $('#jelly-slider02').jellySlider({
                             loop: true,
-                            speed: 1000,
+                        });
+                    </script>
+                </div>
+            </li>
+            <li>
+                <h2 class="sec-tit">fade</h2>
+                <div class="cont-box">
+                    <div id="jelly-slider03" class="jelly-slider">
+                        <div class="jelly-list">
+                            <div class="jelly-slide"><div class="box">0</div></div>
+                            <div class="jelly-slide"><div class="box">1</div></div>
+                            <div class="jelly-slide"><div class="box">2</div></div>
+                            <div class="jelly-slide"><div class="box">3</div></div>
+                        </div>
+                    </div>
+                    <script>
+                        $('#jelly-slider03').jellySlider({
                             fade: true,
                         });
                     </script>
