--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </li>
             <li>
-                <h2 class="sec-tit">fade</h2>
+                <h2 class="sec-tit">drag</h2>
                 <div class="cont-box">
                     <div id="jelly-slider03" class="jelly-slider">
                         <div class="jelly-list">
@@ -66,7 +66,8 @@
                     </div>
                     <script>
                         $('#jelly-slider03').jellySlider({
-                            fade: true,
+                            loop: true,
+                            drag: true,
                         });
                     </script>
                 </div>
