--- a/index.html
+++ b/index.html
@@ -97,6 +97,45 @@
                     </script>
                 </div>
             </li>
+            <li>
+                <h2 class="sec-tit">multiple</h2>
+                <div class="cont-box">
+                    <div id="jelly-slider04" class="jelly-slider">
+                        <div class="jelly-list">
+                            <div class="jelly-slide"><div class="box">0</div></div>
+                            <div class="jelly-slide"><div class="box">1</div></div>
+                            <div class="jelly-slide"><div class="box">2</div></div>
+                            <div class="jelly-slide"><div class="box">4</div></div>
+                            <div class="jelly-slide"><div class="box">5</div></div>
+                            <div class="jelly-slide"><div class="box">6</div></div>
+                            <div class="jelly-slide"><div class="box">7</div></div>
+                            <div class="jelly-slide"><div class="box">8</div></div>
+                        </div>
+                    </div>
+                    <div class="code-area">
+                        <pre>
+&lt;script&gt;
+    $('#jelly-slider04').jellySlider({
+        loop: true,
+        drag: true,
+        view: 4,
+        move: 4,
+        margin: 20,
+    });
+&lt;/script&gt;
+                        </pre>
+                    </div>
+                    <script>
+                        $('#jelly-slider04').jellySlider({
+                            loop: true,
+                            drag: true,
+                            view: 4,
+                            move: 4,
+                            margin: 20,
+                        });
+                    </script>
+                </div>
+            </li>
         </ul>
     </div>
 </body>
