혼돈의 카오스

--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
                             <div class="jelly-slide"><div class="box">6</div></div>
                             <div class="jelly-slide"><div class="box">7</div></div>
                             <div class="jelly-slide"><div class="box">8</div></div>
+                            <div class="jelly-slide"><div class="box">9</div></div>
                         </div>
                     </div>
                     <div class="code-area">
@@ -117,10 +118,9 @@
 &lt;script&gt;
     $('#jelly-slider04').jellySlider({
         loop: true,
-        drag: true,
-        view: 4,
-        move: 2,
-        margin: 20,
+        view: 6,
+        move: 3,
+        margin: 10,
     });
 &lt;/script&gt;
                         </pre>
@@ -128,10 +128,46 @@
                     <script>
                         $('#jelly-slider04').jellySlider({
                             loop: true,
-                            drag: true,
+                            view: 6,
+                            move: 3,
+                            margin: 10,
+                        });
+                    </script>
+                </div>
+            </li>
+            <li>
+                <h2 class="sec-tit">multiple</h2>
+                <div class="cont-box">
+                    <div id="jelly-slider05" class="jelly-slider">
+                        <div class="jelly-list">
+                            <div class="jelly-slide"><div class="box">1</div></div>
+                            <div class="jelly-slide"><div class="box">2</div></div>
+                            <div class="jelly-slide"><div class="box">3</div></div>
+                            <div class="jelly-slide"><div class="box">4</div></div>
+                            <div class="jelly-slide"><div class="box">5</div></div>
+                            <div class="jelly-slide"><div class="box">6</div></div>
+                            <div class="jelly-slide"><div class="box">7</div></div>
+                            <div class="jelly-slide"><div class="box">8</div></div>
+                        </div>
+                    </div>
+                    <div class="code-area">
+                        <pre>
+&lt;script&gt;
+    $('#jelly-slider04').jellySlider({
+        loop: true,
+        view: 5,
+        move: 1,
+        margin: 10,
+    });
+&lt;/script&gt;
+                        </pre>
+                    </div>
+                    <script>
+                        $('#jelly-slider05').jellySlider({
+                            loop: true,
                             view: 5,
                             move: 1,
-                            margin: 20,
+                            margin: 10,
                         });
                     </script>
                 </div>
